[package]
name = "botMessenger"
version = "0.1.0"
authors = ["CyberWolf37 <borel.loic.37@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
rocket_codegen = "0.4.6"
rocket_contrib = "0.4.6"
ureq = { version = "*", features = ["json", "charset"] }
log = "0.4.11"
env_logger = "0.8.1"
serde_json = "1.0.59"
serde_derive = "1.0.117"
serde = "1.0.117"
http = "0.2.1"
futures = "0.3"
